--- a/TTT.Unity/Assets/_Project/Develop/GoldenDragon.Game/Runtime/TTT.Runtime.asmdef
+++ b/TTT.Unity/Assets/_Project/Develop/GoldenDragon.Game/Runtime/TTT.Runtime.asmdef
@@ -4,8 +4,10 @@
     "references": [
         "VContainer",
         "UniTask",
+        "UniTask.DOTween",
         "DOTween.Modules",
-        "DOTweenPro.Scripts"
+        "DOTweenPro.Scripts",
+        "Unity.TextMeshPro"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
