add load asset adressable MetaRootUi

--- a/TTT.Unity/Assets/_Project/Develop/GoldenDragon.Game/Editor/TTT.Editor.asmdef
+++ b/TTT.Unity/Assets/_Project/Develop/GoldenDragon.Game/Editor/TTT.Editor.asmdef
@@ -1,3 +1,22 @@
 {
-	"name": "G"
+    "name": "TTT.Editor",
+    "rootNamespace": "",
+    "references": [
+        "Unity.Addressables",
+        "Unity.Addressables.Editor",
+        "Unity.ResourceManager",
+        "Unity.2D.Sprite.Editor",
+        "Unity.TextMeshPro.Editor"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": false,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
