--- a/TTT.Unity/Assets/_Project/Develop/GoldenDragon.Game/Runtime/TTT.Runtime.asmdef
+++ b/TTT.Unity/Assets/_Project/Develop/GoldenDragon.Game/Runtime/TTT.Runtime.asmdef
@@ -4,11 +4,15 @@
     "references": [
         "VContainer",
         "UniTask",
+        "UniTask.Addressables",
         "UniTask.DOTween",
         "DOTween.Modules",
         "DOTweenPro.Scripts",
         "Unity.TextMeshPro",
-        "UniRx"
+        "UniRx",
+        "Unity.ResourceManager",
+        "Unity.Addressables",
+        "Unity.Collections"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
