add switch Lang ui screen registration

--- a/TTT.Unity/Assets/_Project/Develop/GoldenDragon.Game/Tests/EditMode/EditTest.asmdef
+++ b/TTT.Unity/Assets/_Project/Develop/GoldenDragon.Game/Tests/EditMode/EditTest.asmdef
@@ -6,7 +6,9 @@
         "UnityEditor.TestRunner",
         "Unity.Addressables",
         "Unity.ResourceManager",
-        "TTT.Runtime"
+        "TTT.Runtime",
+        "UniTask",
+        "UniTask.Editor"
     ],
     "includePlatforms": [
         "Editor"
