add audio mixer test, language in to update

--- a/TTT.Unity/Assets/_Project/Develop/GoldenDragon.Game/Editor/TTT.Editor.asmdef
+++ b/TTT.Unity/Assets/_Project/Develop/GoldenDragon.Game/Editor/TTT.Editor.asmdef
@@ -6,7 +6,8 @@
         "Unity.Addressables.Editor",
         "Unity.ResourceManager",
         "Unity.2D.Sprite.Editor",
-        "Unity.TextMeshPro.Editor"
+        "Unity.TextMeshPro.Editor",
+        "TTT.Runtime"
     ],
     "includePlatforms": [
         "Editor"
