--- a/TTT.Unity/Assets/_Project/Develop/GoldenDragon.Game/Tests/EditMode/EditTest.asmdef
+++ b/TTT.Unity/Assets/_Project/Develop/GoldenDragon.Game/Tests/EditMode/EditTest.asmdef
@@ -8,7 +8,8 @@
         "Unity.ResourceManager",
         "TTT.Runtime",
         "UniTask",
-        "UniTask.Editor"
+        "UniTask.Editor",
+        ""
     ],
     "includePlatforms": [
         "Editor"
@@ -17,7 +18,8 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll"
+        "nunit.framework.dll",
+        "Newtonsoft.Json.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
